--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,14 +2,14 @@
 <html lang="en" class="light"> 
 
 <head>
-  <link rel="stylesheet" href="/frontend/css/styles.css">
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
   <nav class="navbar">
     <header class="nav-header">
       <div class="nav-image">
-        <img src="/frontend/images/TC_Logos-01.png" alt="PLACEHOLDER">
+        <img src="./images/TC_Logos-01.png" alt="PLACEHOLDER">
       </div>
     </header>
     <div class="nav-links">
@@ -21,16 +21,16 @@
     </div>
     <div class="usr-panel">
       <button href="#">Sign Up</button>
-      <img src="/frontend/images/EmptyBag.svg" alt="empty-shopping-bag">
-      <img src="/frontend/images/GuestIcon.svg" alt="guest-profile-icon">
+      <img src="./images/EmptyBag.svg" alt="empty-shopping-bag">
+      <img src="./images/GuestIcon.svg" alt="guest-profile-icon">
     </div>
   </nav>
   
   <main>
     <div class="lp-banner">
-      <video src="/frontend/images/cambridge_students_walking.mp4" loading="lazy" autoplay muted loop></video>
+      <video src="./images/cambridge_students_walking.mp4" loading="lazy" autoplay muted loop></video>
       <div class="content">
-        <img src="/frontend/images/PLACEHOLDER.svg" loading="lazy">
+        <img src="./images/PLACEHOLDER.svg" loading="lazy">
         <h1>This is a test</h1>
 
       </div>      
@@ -71,10 +71,10 @@
           <h4>Navigation</h4>
           <div>
             <ul>
-              <li><a href="/frontend/index.html">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Pricing</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="./non members/">About</a></li>
+              <li><a href="./non members/member page.html">Pricing</a></li>
+              <li><a href="./non members/contact-support.html">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -84,8 +84,8 @@
             <ul>
               <li><a href="/frontend/index.html">Standard</a></li>
               <li><a href="#">Community</a></li>
-              <li><a href="#">Key Access</a></li>
-              <li><a href="#">Creative Workspace</a></li>
+              <li><a href="./non members/key-access-membership.html">Key Access</a></li>
+              <li><a href="./non members/creative-workspace-membership.html">Creative Workspace</a></li>
             </ul>
           </div>
         </div>
@@ -105,7 +105,7 @@
           <div>
             <ul>
               <li><a href="/frontend/index.html">Contact Us</a></li>
-              <li><a href="#">Report</a></li>
+              <li><a href="./non members/">Report</a></li>
               
             </ul>
           </div>
